@@ -3,6 +3,8 @@ po4a (0.15.4-2) UNRELEASED; urgency=low
   * Fix buglets in doc/po4a.7.pod
   * Replace prefix variable by DESTDIR in debian/rules and po/bin/Makefile
     to follow GNU usage.
+  * As told in section 3.1 of the Perl policy, man pages must be installed
+    under section 3pm, not 3perl.
 
  -- Denis Barbier <barbier@debian.org>  Wed, 26 Nov 2003 20:40:16 +0100
 
